# cookiecutter-data-science

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: Makefile  README.md  pyproject.toml
